# defectsElasticity

./: #Doxyfile#  .#.gitignore  Doxyfile  DoxygenWarningLog.txt  README.md  readme.md  test
html/: _8h.html  _8h_source.html  _i_g_a__dislocation_8cc.html  _i_g_a__dislocation_8h.html  _i_g_a__dislocation_8h_source.html  _i_g_a__structure_8cc.html  _i_g_a__structure_8h.html  _i_g_a__structure_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  b_fitting_8h.html  b_fitting_8h_source.html  class_i_g_a__dislocation-members.html  class_i_g_a__dislocation.html  class_i_g_a__structure-members.html  class_i_g_a__structure.html  classes.html  classmodel__dislocation-members.html  classmodel__dislocation.html  classmodel__structure-members.html  classmodel__structure.html  defects_2edge__dislocation_2multiple_2apply__boundary__conditions_8cc.html  defects_2edge__dislocation_2multiple_2main_8cc.html  defects_2edge__dislocation_2single_2apply__boundary__conditions_8cc.html  defects_2edge__dislocation_2single_2main_8cc.html  defects_2loop_2apply__boundary__conditions_8cc.html  defects_2loop_2main_8cc.html  defects_2screw_2multiple_2apply__boundary__conditions_8cc.html  defects_2screw_2multiple_2main_8cc.html  defects_2screw_2single_2apply__boundary__conditions_8cc.html  defects_2screw_2single_2assemble__system__interval_8cc.html  defects_2screw_2single_2main_8cc.html  defects_2screw_2single_2output_8cc.html  defects_2screw_2single_2run_8cc.html  defects_2src_2assemble__system__interval_8cc.html  defects_2src_2output_8cc.html  defects_2src_2run_8cc.html  dir_1d7bf7b0e5978fd2f954dbfc7d69d5bd.html  dir_2cf1aff67356569f474d27c86a775f1e.html  dir_3057bdd3b0500cc6475b35eab18efe1f.html  (+57 more)
html/search/: all_61.js  all_62.js  all_64.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_6f.js  all_70.js  all_72.js  classes_69.js  classes_6d.js  defines_64.js  defines_6e.js  files_61.js  files_62.js  files_67.js  files_69.js  files_6d.js  files_6f.js  files_72.js  functions_61.js  functions_64.js  functions_67.js  functions_69.js  functions_6d.js  functions_6f.js  functions_72.js  functions_7e.js  search.js  variables_62.js  variables_64.js  variables_73.js
include/base/: IGA_dislocation.h  IGA_structure.h
include/initBoundValueProb/: IGA_structure.h
include/model/: model_dislocation.h  model_structure.h
initBoundValProbs/defects/edge_dislocation/multiple/: CMakeLists.txt  apply_boundary_conditions.cc  assemble_system_interval.cc  main.cc  mark_plane.cc
initBoundValProbs/defects/edge_dislocation/single/: main.cc  mark_plane.cc  run.cc
initBoundValProbs/defects/loop/: assemble_system_interval.cc  main.cc  mark_plane.cc
initBoundValProbs/defects/pointDefect/: #main.cc#  CMakeLists.txt  apply_boundary_conditions.cc  assemble_system_interval.cc  main.cc  mark_plane.cc  output.cc
initBoundValProbs/defects/screw/multiple/: assemble_system_interval.cc  output.cc  run.cc
initBoundValProbs/defects/screw/single/: assemble_system_interval.cc  mark_plane.cc  run.cc
initBoundValProbs/defects/src/: output.cc
initBoundValProbs/example/: .h  CMakeLists.txt
initBoundValProbs/structure/bending/: assemble_system_interval.cc  main.cc  output.cc  run.cc
initBoundValProbs/structure/bending/output/: readme.txt
initBoundValProbs/structure/pointDefect/: main.cc  residualForBodyforce.cc
initBoundValProbs/structure/src/: assemble_system_interval.cc  output.cc
initBoundValProbs/structure/tension/: #main.cc#  apply_boundary_conditions.cc  assemble_system_interval.cc  main.cc  run.cc
initBoundValProbs/structure/torsion/: CMakeLists.txt  apply_boundary_conditions.cc  assemble_system_interval.cc  main.cc  output.cc  run.cc
initBoundValueProblems/defects/: bFitting.h
initBoundValueProblems/defects/edge_dislocation/multiple/: main.cc
initBoundValueProblems/defects/screw/multiple/: mark_plane.cc
initBoundValueProblems/defects/screw/single/: output.cc
initBoundValueProblems/defects/src/: assemble_system_interval.cc
initBoundValueProblems/example/: main.cc
initBoundValueProblems/structure/bending/: apply_boundary_conditions.cc  main.cc
initBoundValueProblems/structure/pointDefect/: apply_boundary_conditions.cc
initBoundValueProblems/structure/src/: getResidual.cc
initBoundValueProblems/structure/torsion/: main.cc
mesh/: IGAMesh3DQuadratic5.h5
src/base/: IGA_dislocation.cc  IGA_structure.cc
src/model/dislocation/: model_dislocation.cc
src/model/structure/: model_structure.cc  residualForBodyforce.cc
